syntax = "proto3";

package campaign.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/louisbranch/duality-engine/api/gen/go/campaign/v1;campaignv1";

message Character {
  string id = 1;
  string campaign_id = 2;
  string name = 3;
  CharacterKind kind = 4;
  string notes = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

enum CharacterKind {
  CHARACTER_KIND_UNSPECIFIED = 0;
  PC = 1;
  NPC = 2;
}
